# voodoo-hackathon-team-wingstorm

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/skills/creative-forge/: SKILL.md
.claude/skills/full-forge/: SKILL.md
.claude/skills/inline-html-assets/: SKILL.md
.claude/skills/iterate/: SKILL.md
.claude/skills/new-pipeline/: SKILL.md
.claude/skills/playable-ad-design/: SKILL.md
.claude/skills/playable-forge/: SKILL.md
.claude/skills/scenario-generate/: SKILL.md
.claude/skills/sensortower-research/: REFERENCE.md  SKILL.md
.claude/skills/video-ad-design/: SKILL.md
assets/: README.md
assets/castle_clashers/: Character_Cyclop.psb  MANIFEST.md
output/: README.md
reference/: README.md
src/adforge/: __init__.py  api.py  cli.py  config.py  feedback.py  projects.py  runner.py  runs.py  targets.py  utils.py  worker.py
src/adforge/activities/: __init__.py  briefing.py  creative_render.py  finalize.py  intel.py  io.py  keyframes.py  market_data.py  pattern_extraction.py  playable_build.py  project_intel.py  types.py  variations.py  video_analysis.py
src/adforge/connectors/: __init__.py  claude.py  gemini.py  mistral.py  scenario.py  sensortower.py
src/adforge/pipelines/: __init__.py  creative_forge.py  full_forge.py  market_intel.py  playable_forge.py
targets/: README.md
targets/castle_clashers/: target.json
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/components/: Layout.tsx  (+4 more)
videos/: README.md
(+14 files in other folders)
